reorganized folders and renamed pages
converted pages to index.html in folders

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				</div>
 				
 				<div class="col-lg-4 col-sm-4 col-xs-12 text-center fade-img">
-				<a href="photography.html" class="thumbnail blue-text">
+				<a href="./photography/" class="thumbnail blue-text">
 					<img class = "img-responsive center-block" src="images/2a.png" alt="photography + art button">
 					<h3 class = "no-top-margin"> photography + art </h3>
 				</a>
