--- a/photography/portraiture/index.html
+++ b/photography/portraiture/index.html
@@ -1,3 +1,4 @@
+<!-- portraits photo page -->
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -9,13 +10,13 @@
 		<link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Covered+By+Your+Grace' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" href="../css/bootstrap.css">
-		<link rel="stylesheet" href="../css/myStyle.css">
+		<link rel="stylesheet" href="../../css/bootstrap.css">
+		<link rel="stylesheet" href="../../css/myStyle.css">
 	
 		
-        <link rel="stylesheet" type="text/css" href="../css/reset.css" />
-		<link rel="stylesheet" type="text/css" href="../css/style.css" />
-		<link rel="stylesheet" type="text/css" href="../css/elastislide.css" />
+        <link rel="stylesheet" type="text/css" href="../../css/reset.css" />
+		<link rel="stylesheet" type="text/css" href="../../css/style.css" />
+		<link rel="stylesheet" type="text/css" href="../../css/elastislide.css" />
 		<noscript>
 			<style>
 				.es-carousel ul{
@@ -46,7 +47,7 @@
 		
                 <div class="row row-fluid">
                     <div class="header-text2 col-sm-4 col-xs-12 col-sm-push-8 text-uppercase" style="margin-bottom:30px;">
-                        <a href="../index.html" class = "thumbnail black-text"> 
+                        <a href="../../" class = "thumbnail black-text"> 
                             <p style="white-space:nowrap">Evonne McArthur</p>
                         </a>
                     </div>
@@ -55,7 +56,7 @@
                             <span class = "highlight-green header-boxes" style="white-space: nowrap">&nbsp;academics + science&nbsp;</span>
                         </a>
                         <span>&nbsp;</span>
-                        <a href="../photography.html" class="thumbnail blue-text">
+                        <a href="../" class="thumbnail blue-text">
                             <span class = "highlight-blue header-boxes" style="white-space: nowrap; background-color:#323ea7; color: white;">&nbsp;photography + art&nbsp;</span>
                         </a>
                         <span>&nbsp;</span>
@@ -79,11 +80,10 @@
 							</div>
 							<div class="es-carousel">
 								<ul>
-									<li><a href="#"><img src="https://farm4.staticflickr.com/3364/3442620667_6f925642e9_q.jpg" data-large="https://farm4.staticflickr.com/3364/3442620667_6f925642e9_b.jpg" alt="image02" data-description="Peak 8 Summit Elevation: 12,998', Breckenridge, Colorado " /></a></li>
-									<li><a href="#"><img src="https://farm6.staticflickr.com/5303/5612193674_8c59ce2b74_q.jpg" data-large="https://farm6.staticflickr.com/5303/5612193674_8c59ce2b74_b.jpg" alt="image01" data-description="Golden Gate Bridge from Marin Headlands, San Francisco, CA" /></a></li>
-									<li><a href="#"><img src="https://farm5.staticflickr.com/4023/5137635613_2ca3664fcc_q.jpg" data-large="https://farm5.staticflickr.com/4023/5137635613_2ca3664fcc_b.jpg" alt="image03" data-description="Sound Side, Emerald Isle, NC" /></a></li>
-									<li><a href="#"><img src="https://farm4.staticflickr.com/3404/3213228781_245b239324_q.jpg" data-large="https://farm4.staticflickr.com/3404/3213228781_245b239324_b.jpg" alt="image03" data-description="Backyard Snow Day, Raleigh, NC" /></a></li>
-									<li><a href="#"><img src="https://farm4.staticflickr.com/3768/9688755460_1d9720e7f5_q.jpg" data-large="https://farm4.staticflickr.com/3768/9688755460_1d9720e7f5_b.jpg" alt="image03" data-description="Night on the Chicago River, Chicago, IL" /></a></li>
+									<li><a href="#"><img src="https://farm9.staticflickr.com/8242/8669658903_51bdc3ea0a_q.jpg" data-large="https://farm9.staticflickr.com/8242/8669658903_51bdc3ea0a_b.jpg" alt="image01" data-description="Taylor & Ryan" /></a></li>
+									<li><a href="#"><img src="https://farm6.staticflickr.com/5512/9140462500_3c87ebac17_q.jpg" data-large="https://farm6.staticflickr.com/5512/9140462500_3c87ebac17_b.jpg" alt="image02" data-description="2013 Graduates" /></a></li>
+									<li><a href="#"><img src="https://farm7.staticflickr.com/6159/6142345333_47b1ec88fa_q.jpg" data-large="https://farm7.staticflickr.com/6159/6142345333_47b1ec88fa_b.jpg" alt="image03" data-description="Sweet Potato Harvest" /></a></li>
+									<li><a href="#"><img src="https://farm4.staticflickr.com/3379/3337257542_a96d445bef_q.jpg" data-large="https://farm4.staticflickr.com/3379/3337257542_a96d445bef_b.jpg" alt="image04" data-description="Taylor" /></a></li>
 
 								</ul>
 							</div>
@@ -97,9 +97,9 @@
 			</div>
 		</div><!-- container --> 
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-		<script type="text/javascript" src="../js/jquery.tmpl.min.js"></script>
-		<script type="text/javascript" src="../js/jquery.easing.1.3.js"></script>
-		<script type="text/javascript" src="../js/jquery.elastislide.js"></script>
-		<script type="text/javascript" src="../js/gallery.js"></script>
+		<script type="text/javascript" src="../../js/jquery.tmpl.min.js"></script>
+		<script type="text/javascript" src="../../js/jquery.easing.1.3.js"></script>
+		<script type="text/javascript" src="../../js/jquery.elastislide.js"></script>
+		<script type="text/javascript" src="../../js/gallery.js"></script>
     </body>
 </html>
