--- a/photography/india/index.html
+++ b/photography/india/index.html
@@ -1,3 +1,4 @@
+<!-- India photo page -->
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -9,13 +10,13 @@
 		<link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Covered+By+Your+Grace' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" href="../css/bootstrap.css">
-		<link rel="stylesheet" href="../css/myStyle.css">
+		<link rel="stylesheet" href="../../css/bootstrap.css">
+		<link rel="stylesheet" href="../../css/myStyle.css">
 	
 		
-        <link rel="stylesheet" type="text/css" href="../css/reset.css" />
-		<link rel="stylesheet" type="text/css" href="../css/style.css" />
-		<link rel="stylesheet" type="text/css" href="../css/elastislide.css" />
+        <link rel="stylesheet" type="text/css" href="../../css/reset.css" />
+		<link rel="stylesheet" type="text/css" href="../../css/style.css" />
+		<link rel="stylesheet" type="text/css" href="../../css/elastislide.css" />
 		<noscript>
 			<style>
 				.es-carousel ul{
@@ -46,7 +47,7 @@
 		
                 <div class="row row-fluid">
                     <div class="header-text2 col-sm-4 col-xs-12 col-sm-push-8 text-uppercase" style="margin-bottom:30px;">
-                        <a href="../index.html" class = "thumbnail black-text"> 
+                        <a href="../../" class = "thumbnail black-text"> 
                             <p style="white-space:nowrap">Evonne McArthur</p>
                         </a>
                     </div>
@@ -55,7 +56,7 @@
                             <span class = "highlight-green header-boxes" style="white-space: nowrap">&nbsp;academics + science&nbsp;</span>
                         </a>
                         <span>&nbsp;</span>
-                        <a href="../photography.html" class="thumbnail blue-text">
+                        <a href="../" class="thumbnail blue-text">
                             <span class = "highlight-blue header-boxes" style="white-space: nowrap; background-color:#323ea7; color: white;">&nbsp;photography + art&nbsp;</span>
                         </a>
                         <span>&nbsp;</span>
@@ -138,9 +139,9 @@
 			</div>
 		</div><!-- container --> 
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-		<script type="text/javascript" src="../js/jquery.tmpl.min.js"></script>
-		<script type="text/javascript" src="../js/jquery.easing.1.3.js"></script>
-		<script type="text/javascript" src="../js/jquery.elastislide.js"></script>
-		<script type="text/javascript" src="../js/gallery.js"></script>
+		<script type="text/javascript" src="../../js/jquery.tmpl.min.js"></script>
+		<script type="text/javascript" src="../../js/jquery.easing.1.3.js"></script>
+		<script type="text/javascript" src="../../js/jquery.elastislide.js"></script>
+		<script type="text/javascript" src="../../js/gallery.js"></script>
     </body>
 </html>
