--- a/photography/index.html
+++ b/photography/index.html
@@ -22,15 +22,19 @@
                     </div>
                     <div class="header-text1 font2 col-sm-8 col-sm-pull-4 col-xs-12">
                         <a href="#" class="thumbnail green-text">
-                            <span class = "highlight-green header-boxes" style="white-space: nowrap">&nbsp;academics + science&nbsp;</span>
+                            <span class = "highlight-green header-boxes" style="white-space: nowrap">&nbsp;science&nbsp;</span>
                         </a>
                         <span>&nbsp;</span>
                         <a href="#" class="thumbnail blue-text">
-                            <span class = "highlight-blue header-boxes" style="white-space: nowrap; background-color:#323ea7; color: white;">&nbsp;photography + art&nbsp;</span>
+                            <span class = "highlight-blue header-boxes" style="white-space: nowrap; background-color:#323ea7; color: white;">&nbsp;photography&nbsp;</span>
+                        </a>
+						<span>&nbsp;</span>
+                        <a href="#" class="thumbnail blue-text">
+                            <span class = "highlight-blue header-boxes" style="white-space: nowrap; background-color:#323ea7; color: white;">&nbsp;projects&nbsp;</span>
                         </a>
                         <span>&nbsp;</span>
                         <a href="#" class="thumbnail red-text">
-                            <span class = "highlight-red header-boxes" style="white-space: nowrap">&nbsp;about + contact&nbsp;</span>
+                            <span class = "highlight-red header-boxes" style="white-space: nowrap">&nbsp;about&nbsp;</span>
                         </a>
                     </div>
                 </div>
