updated tabs on all pages to include projects

--- a/photography/index.html
+++ b/photography/index.html
@@ -29,12 +29,12 @@
                             <span class = "highlight-blue header-boxes" style="white-space: nowrap; background-color:#323ea7; color: white;">&nbsp;photography&nbsp;</span>
                         </a>
 						<span>&nbsp;</span>
-                        <a href="#" class="thumbnail blue-text">
-                            <span class = "highlight-blue header-boxes" style="white-space: nowrap; background-color:#323ea7; color: white;">&nbsp;projects&nbsp;</span>
+                        <a href="#" class="thumbnail red-text">
+                            <span class = "highlight-red header-boxes" style="white-space: nowrap">&nbsp;projects&nbsp;</span>
                         </a>
                         <span>&nbsp;</span>
-                        <a href="#" class="thumbnail red-text">
-                            <span class = "highlight-red header-boxes" style="white-space: nowrap">&nbsp;about&nbsp;</span>
+                        <a href="#" class="thumbnail purple-text">
+                            <span class = "highlight-purple header-boxes" style="white-space: nowrap">&nbsp;about&nbsp;</span>
                         </a>
                     </div>
                 </div>
@@ -70,7 +70,7 @@
 				</div>
 			
 			<div class = "row text-right">
-				<p style="margins: 15px; size: 10px; color: gray;">&copy; Evonne McArthur 2015</p>
+				<p style="margins: 15px; size: 10px; color: gray;">&copy; Evonne McArthur 2016</p>
 			</div>
 		</body>
 	
