--- a/photography/india/index.html
+++ b/photography/india/index.html
@@ -46,22 +46,26 @@
 		<div class="container">
 		
                 <div class="row row-fluid">
-                    <div class="header-text2 col-sm-4 col-xs-12 col-sm-push-8 text-uppercase" style="margin-bottom:30px;">
-                        <a href="../../" class = "thumbnail black-text"> 
+                    <div class="header-text2 col-sm-4 col-xs-12 col-sm-push-8 text-uppercase">
+                        <a href="../" class = "thumbnail black-text"> 
                             <p style="white-space:nowrap">Evonne McArthur</p>
                         </a>
                     </div>
-                    <div class="header-text1 font2 col-sm-8 col-sm-pull-4 col-xs-12" style="margin-bottom:30px;">
+                    <div class="header-text1 font2 col-sm-8 col-sm-pull-4 col-xs-12">
                         <a href="#" class="thumbnail green-text">
-                            <span class = "highlight-green header-boxes" style="white-space: nowrap">&nbsp;academics + science&nbsp;</span>
+                            <span class = "highlight-green header-boxes" style="white-space: nowrap">&nbsp;science&nbsp;</span>
                         </a>
                         <span>&nbsp;</span>
-                        <a href="../" class="thumbnail blue-text">
-                            <span class = "highlight-blue header-boxes" style="white-space: nowrap; background-color:#323ea7; color: white;">&nbsp;photography + art&nbsp;</span>
+                        <a href="#" class="thumbnail blue-text">
+                            <span class = "highlight-blue header-boxes" style="white-space: nowrap; background-color:#323ea7; color: white;">&nbsp;photography&nbsp;</span>
                         </a>
-                        <span>&nbsp;</span>
+						<span>&nbsp;</span>
                         <a href="#" class="thumbnail red-text">
-                            <span class = "highlight-red header-boxes" style="white-space: nowrap">&nbsp;about + contact&nbsp;</span>
+                            <span class = "highlight-red header-boxes" style="white-space: nowrap">&nbsp;projects&nbsp;</span>
+                        </a>
+                        <span>&nbsp;</span>
+                        <a href="#" class="thumbnail purple-text">
+                            <span class = "highlight-purple header-boxes" style="white-space: nowrap">&nbsp;about&nbsp;</span>
                         </a>
                     </div>
                 </div>
