--- a/science/index.html
+++ b/science/index.html
@@ -44,7 +44,7 @@
 			
 			<div class = "row">
 				<div class = "row center-align ">
-					<img class = "img-responsive center-block" style="max-width=100%;padding-left:10px;margin-bottom:25px;" src="./untitled10.png" alt="Interest Map" />
+					<img class = "img-responsive center-block" style="max-width=100%;padding-left:10px;margin-bottom:25px;" src="./InterestMap.png" alt="Interest Map" />
 				</div>	
 				<p class = "para-text" >When thinking about how I wanted to write about my scientific and research interests, I realized that my interests are varied and diverse; however, they are also interconnected in many ways. I figured a unique way to illustrate these interests (and demonstrate my passion for displaying data) would be to create a map that could be used to highlight the breadth and connectedness of the domains of science and research I enjoy--an “interest map”.</p>
 				<p class = "para-text" >Above, you see my current interest map. Each node is an interest of mine and they are sized according the level of interest at the moment with my primary interesting being computational genomics. Each edge between the nodes are weighted to the degree of how connected the two topics. The degree of connectedness was calculated by the number of publications in NCBI that contain both terms. For example, as you might expect, the words medicine and oncology are used together in many papers so they get a high weight of connectedness. The colors represent the modularity class, meaning nodes that are similarly colored have dense connections between the nodes but sparse connected with nodes of other classes. The classes grouped into (mostly) logical groups which I colored red, which encompasses a lot of medical interests; blue, with data and computational science interests; and purple, which represents the intersection between biology and computers. More details about the interest map’s creation are in the projects section.</p>
@@ -64,7 +64,7 @@
 					<ul class = "col-lg-9 col-sm-8 col-xs-6 para-text">
 						<li>Investigating RNA structure’s relationship with human disease</li>
 						<li>Worked to create a pipeline for CNV calling for use in pharmacogenomic association studies</li>
-					  <li>Developed a queryable database integrating CNV data with exome sequence data to investigate Autism Spectrum Disorder</li>
+						<li>Developed a queryable database integrating CNV data with exome sequence data to investigate Autism Spectrum Disorder</li>
 					</ul>					
 				</div>
 				
