--- a/photography/index.html
+++ b/photography/index.html
@@ -1,3 +1,4 @@
+<!-- Photography Page -->
 <!DOCTYPE html>
 <html lang = "en">
 	<head>
@@ -21,7 +22,7 @@
                         </a>
                     </div>
                     <div class="header-text1 font2 col-sm-8 col-sm-pull-4 col-xs-12">
-                        <a href="#" class="thumbnail green-text">
+                        <a href="../science" class="thumbnail green-text">
                             <span class = "highlight-green header-boxes" style="white-space: nowrap">&nbsp;science&nbsp;</span>
                         </a>
                         <span>&nbsp;</span>
