--- a/photography/landscape/index.html
+++ b/photography/landscape/index.html
@@ -45,18 +45,18 @@
     <body>
 		<div class="container">
 		
-                <div class="row row-fluid">
+				<div class="row row-fluid">
                     <div class="header-text2 col-sm-4 col-xs-12 col-sm-push-8 text-uppercase">
-                        <a href="../" class = "thumbnail black-text"> 
+                        <a href="../../" class = "thumbnail black-text"> 
                             <p style="white-space:nowrap">Evonne McArthur</p>
                         </a>
                     </div>
                     <div class="header-text1 font2 col-sm-8 col-sm-pull-4 col-xs-12">
-                        <a href="#" class="thumbnail green-text">
+                        <a href="../../science" class="thumbnail green-text">
                             <span class = "highlight-green header-boxes" style="white-space: nowrap">&nbsp;science&nbsp;</span>
                         </a>
                         <span>&nbsp;</span>
-                        <a href="#" class="thumbnail blue-text">
+                        <a href="../" class="thumbnail blue-text">
                             <span class = "highlight-blue header-boxes" style="white-space: nowrap; background-color:#323ea7; color: white;">&nbsp;photography&nbsp;</span>
                         </a>
 						<span>&nbsp;</span>
