--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<div class="row font2">
 			
 				<div style="padding:0;" class="col-lg-3 col-sm-3 col-xs-12 text-center fade-img">
-				<a href="#" class="thumbnail green-text">
+				<a href="./science/" class="thumbnail green-text">
 					<img class = "img-responsive center-block" src="images/lab.png" alt="science button">
 					<h3 class = "no-top-margin"> science </h3>
 				</a>
@@ -37,7 +37,7 @@
 				</div>
 				
 				<div style="padding:0;" class="col-lg-3  col-sm-3 col-xs-12 text-center fade-img">
-				<a href="#" class="thumbnail red-text">
+				<a href="./projects/cookbook/" class="thumbnail red-text">
 					<img class = "img-responsive center-block" src="images/lightbulb.png" alt="projects button">
 					<h3 class = "no-top-margin"> projects </h3>
 				</a>
