Added projects home page and updated links to projects page

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- Home Page -->
+
 <!DOCTYPE html>
 <html lang = "en">
 	<head>
@@ -37,7 +39,7 @@
 				</div>
 				
 				<div style="padding:0;" class="col-lg-3  col-sm-3 col-xs-12 text-center fade-img">
-				<a href="./projects/cookbook/" class="thumbnail red-text">
+				<a href="./projects/" class="thumbnail red-text">
 					<img class = "img-responsive center-block" src="images/lightbulb.png" alt="projects button">
 					<h3 class = "no-top-margin"> projects </h3>
 				</a>
