--- a/photography/index.html
+++ b/photography/index.html
@@ -30,7 +30,7 @@
                             <span class = "highlight-blue header-boxes" style="white-space: nowrap; background-color:#323ea7; color: white;">&nbsp;photography&nbsp;</span>
                         </a>
 						<span>&nbsp;</span>
-                        <a href="#" class="thumbnail red-text">
+                        <a href="../projects" class="thumbnail red-text">
                             <span class = "highlight-red header-boxes" style="white-space: nowrap">&nbsp;projects&nbsp;</span>
                         </a>
                         <span>&nbsp;</span>
