--- a/science/index.html
+++ b/science/index.html
@@ -32,7 +32,7 @@
                         <span class = "highlight-blue header-boxes" style="white-space: nowrap;">&nbsp;photography&nbsp;</span>
                     </a>
 					<span>&nbsp;</span>
-                    <a href="#" class="thumbnail red-text">
+                    <a href="../projects" class="thumbnail red-text">
                         <span class = "highlight-red header-boxes" style="white-space: nowrap">&nbsp;projects&nbsp;</span>
                     </a>
                     <span>&nbsp;</span>
