--- a/projects/index.html
+++ b/projects/index.html
@@ -55,7 +55,7 @@
 					</a>
 					<a href="#" style="text-decoration:none; color: inherit;">
 						<div class = "row fade-img" style="background-color:#eeeeee; border-style:solid; border-color:white; border-width: 5px ">
-							<img class = "img-responsive center-block" style="max-width=100%; max-height:400px; padding-top: 5%; padding-left:5%; padding-right:5%; margin-bottom:15px;" src="./WallMap.png" alt="WallMapPicture" />
+							<img class = "img-responsive center-block" style="max-width=100%; max-height:400px; padding-top: 5%; padding-left:5%; padding-right:5%; margin-bottom:15px;" src="./WallMap.PNG" alt="WallMapPicture" />
 							<p class = "header-text3" >World Pushpin Map</p> 
 							<p style= "margin:8px;">World pushpin map and custom-made frame to record my travels</p>
 						</div>
@@ -66,14 +66,14 @@
 				<div class = "col-lg-4 col-sm-4 col-xs-12" >
 					<a href="#" style="text-decoration:none; color: inherit;">
 						<div class = "row fade-img" style="background-color:#eeeeee; border-style:solid; border-color:white; border-width: 5px ">
-							<img class = "img-responsive center-block" style="max-width=100%; max-height:400px; padding-top: 5%; padding-left:5%; padding-right:5%; margin-bottom:15px;" src="./SkiMap.png" alt="SkiMapPicture" />
+							<img class = "img-responsive center-block" style="max-width=100%; max-height:400px; padding-top: 5%; padding-left:5%; padding-right:5%; margin-bottom:15px;" src="./SkiMap.PNG" alt="SkiMapPicture" />
 							<p class = "header-text3" >Ski Resort Map Posters</p> 
 							<p style= "margin:8px;">Hand-drawn stylized graphic art interpretations of ski resort maps</p>
 						</div>
 					</a>
 					<a href="https://github.com/emcarthur/emcarthur.github.io" style="text-decoration:none; color: inherit;">
 						<div class = "row fade-img" style="background-color:#eeeeee; border-style:solid; border-color:white; border-width: 5px ">
-							<img class = "img-responsive center-block" style="max-width=100%; max-height:400px; padding-top: 5%; padding-left:5%; padding-right:5%; margin-bottom:15px;" src="./website.png" alt="WebsitePicture" />
+							<img class = "img-responsive center-block" style="max-width=100%; max-height:400px; padding-top: 5%; padding-left:5%; padding-right:5%; margin-bottom:15px;" src="./website.PNG" alt="WebsitePicture" />
 							<p class = "header-text3" >This Website!</p> 
 							<p style= "margin:8px;">A project to teach myself HTML, CSS, Javascript, and design</p>
 						</div>
