--- a/projects/index.html
+++ b/projects/index.html
@@ -64,7 +64,7 @@
 					
 
 				<div class = "col-lg-4 col-sm-4 col-xs-12" >
-					<a href="#" style="text-decoration:none; color: inherit;">
+					<a href="http://emideaworkshop.etsy.com/" style="text-decoration:none; color: inherit;">
 						<div class = "row fade-img" style="background-color:#eeeeee; border-style:solid; border-color:white; border-width: 5px ">
 							<img class = "img-responsive center-block" style="max-width=100%; max-height:400px; padding-top: 5%; padding-left:5%; padding-right:5%; margin-bottom:15px;" src="./SkiMap.PNG" alt="SkiMapPicture" />
 							<p class = "header-text3" >Ski Resort Map Posters</p> 
