--- a/projects/cookbook/index.html
+++ b/projects/cookbook/index.html
@@ -24,16 +24,17 @@
                     </a>
                 </div>
                 <div class="header-text1 font2 col-sm-8 col-sm-pull-4 col-xs-12">
-                    <a href="../../science" class="thumbnail green-text">
-                        <span class = "highlight-green header-boxes" style="white-space: nowrap; background-color:#77c40f; color: white;">&nbsp;science&nbsp;</span>
+					<a href="../../science" class="thumbnail green-text">
+                        <span class = "highlight-green header-boxes" style="white-space: nowrap;">&nbsp;science&nbsp;</span>
                     </a>
+					
                     <span>&nbsp;</span>
-                    <a href="../../photography/" class="thumbnail blue-text">
+                    <a href="../../photography" class="thumbnail blue-text">
                         <span class = "highlight-blue header-boxes" style="white-space: nowrap;">&nbsp;photography&nbsp;</span>
                     </a>
 					<span>&nbsp;</span>
-                    <a href="#" class="thumbnail red-text">
-                        <span class = "highlight-red header-boxes" style="white-space: nowrap">&nbsp;projects&nbsp;</span>
+                    <a href="../" class="thumbnail red-text">
+                        <span class = "highlight-red header-boxes" style="white-space: nowrap; background-color:#cc0000; color: white;">&nbsp;projects&nbsp;</span>
                     </a>
                     <span>&nbsp;</span>
                     <a href="#" class="thumbnail purple-text">
@@ -41,6 +42,7 @@
                     </a>
                 </div>
             </div>
+			
 			
 			<div class = "row">
 					
