--- a/projects/index.html
+++ b/projects/index.html
@@ -88,7 +88,7 @@
 							<p style= "margin:8px;">Homemade cookbook with personal recipes and photography</p>
 						</div>
 					</a>
-					<a href="./DoxIfos_Calendar" style="text-decoration:none; color: inherit;">
+					<a href="./ChemoCalendar" style="text-decoration:none; color: inherit;">
 						<div class = "row fade-img" style="background-color:#eeeeee; border-style:solid; border-color:white; border-width: 5px ">
 							<img class = "img-responsive center-block" style="max-width=100%; max-height:400px; padding-top: 5%; padding-left:5%; padding-right:5%; margin-bottom:15px;" src="./calendar_doxIfos.JPG" alt="DoxIfos_CalendarPicture" />
 							<p class = "header-text3" >Cancer Infusion Calendar</p> 
