--- a/projects/index.html
+++ b/projects/index.html
@@ -92,7 +92,7 @@
 						<div class = "row fade-img" style="background-color:#eeeeee; border-style:solid; border-color:white; border-width: 5px ">
 							<img class = "img-responsive center-block" style="max-width=100%; max-height:400px; padding-top: 5%; padding-left:5%; padding-right:5%; margin-bottom:15px;" src="./calendar_doxIfos.JPG" alt="DoxIfos_CalendarPicture" />
 							<p class = "header-text3" >Cancer Infusion Calendar</p> 
-							<p style= "margin:8px;">An dynamic calendar to help patients keep track of their cancer infusion schedule (with doxorubicin and ifosfamide). Specifically made to print handouts for sarcoma patients in Dr. Davis' Vanderbilt Clinic. <br> <center> <a href="./DoxIfos_Calendar">Live Calendar Here</a>  |   <a href="https://github.com/emcarthur/emcarthur.github.io/tree/master/projects/DoxIfos_Calendar">Github Project Code Here</a></center></p>
+							<p style= "margin:8px;">An dynamic calendar to help patients keep track of their cancer infusion schedule (with doxorubicin and ifosfamide). Specifically made to print handouts for sarcoma patients in Dr. Davis' Vanderbilt Clinic. <br> <center> <a href="./ChemoCalendar">Live Calendar Here</a>  |   <a href="https://github.com/emcarthur/emcarthur.github.io/tree/master/projects/ChemoCalendar">Github Project Code Here</a></center></p>
 						</div>
 					</a>
 				</div>
