--- a/projects/index.html
+++ b/projects/index.html
@@ -55,6 +55,13 @@
 					</a>
 					<a href="#" style="text-decoration:none; color: inherit;">
 						<div class = "row fade-img" style="background-color:#eeeeee; border-style:solid; border-color:white; border-width: 5px ">
+							<img class = "img-responsive center-block" style="max-width=100%; max-height:400px; padding-top: 5%; padding-left:5%; padding-right:5%; margin-bottom:15px;" src="./InterestMap.png" alt="InterestMapPicture" />
+							<p class = "header-text3" >Interest Map</p> 
+							<p style= "margin:8px;"> A network style depiction of my scientific and clinical interests using Gephi and data pulled from PubMed </p>
+						</div>
+					</a>
+					<a href="#" style="text-decoration:none; color: inherit;">
+						<div class = "row fade-img" style="background-color:#eeeeee; border-style:solid; border-color:white; border-width: 5px ">
 							<img class = "img-responsive center-block" style="max-width=100%; max-height:400px; padding-top: 5%; padding-left:5%; padding-right:5%; margin-bottom:15px;" src="./WallMap.PNG" alt="WallMapPicture" />
 							<p class = "header-text3" >World Pushpin Map</p> 
 							<p style= "margin:8px;">World pushpin map and custom-made frame to record my travels</p>
