added dna crochet to projects index page

--- a/projects/index.html
+++ b/projects/index.html
@@ -46,27 +46,27 @@
 			
 			<div class = "row">
 				<div class = "col-lg-4 col-sm-4 col-xs-12" >
+					<a href="./dna_crochet_pattern" style="text-decoration:none; color: inherit;">
+						<div class = "row fade-img" style="background-color:#eeeeee; border-style:solid; border-color:white; border-width: 5px ">
+							<img class = "img-responsive center-block" style="max-width=100%; max-height:400px; padding-top: 5%; padding-left:5%; padding-right:5%; margin-bottom:15px;" src="./projects/dna_crochet_pattern/DNA%20crochet%20plushie!%203e08b42ff07543ef856af5f1683dc713/Untitled.png" alt="crochetPicture" />
+							<p class = "header-text3" >DNA crochet pattern</p> 
+							<p style= "margin:8px;"> A crochet pattern and instructions to make a fun DNA plushie toy </p>
+						</div>
+					</a>
+					<a href="./ChemoCalendar" style="text-decoration:none; color: inherit;">
+						<div class = "row fade-img" style="background-color:#eeeeee; border-style:solid; border-color:white; border-width: 5px ">
+							<img class = "img-responsive center-block" style="max-width=100%; max-height:400px; padding-top: 5%; padding-left:5%; padding-right:5%; margin-bottom:15px;" src="./calendar_doxIfos.JPG" alt="DoxIfos_CalendarPicture" />
+							<p class = "header-text3" >Cancer Infusion Calendar</p> 
+							<p style= "margin:8px;">An dynamic calendar to help patients keep track of their cancer infusion schedule (with doxorubicin and ifosfamide). Specifically made to print handouts for sarcoma patients in Dr. Davis' Vanderbilt Clinic. <br> <center> <a href="./ChemoCalendar">Live Calendar Here</a>  |   <a href="https://github.com/emcarthur/emcarthur.github.io/tree/master/projects/ChemoCalendar">Github Project Code Here</a></center></p>
+						</div>
+					</a>						
 					<a href="#" style="text-decoration:none; color: inherit;">
 						<div class = "row fade-img" style="background-color:#eeeeee; border-style:solid; border-color:white; border-width: 5px ">
 							<img class = "img-responsive center-block" style="max-width=100%; max-height:400px; padding-top: 5%; padding-left:5%; padding-right:5%; margin-bottom:15px;" src="./InterestMap.png" alt="InterestMapPicture" />
 							<p class = "header-text3" >Interest Map</p> 
 							<p style= "margin:8px;"> A network style depiction of my scientific and clinical interests using Gephi and data pulled from PubMed </p>
 						</div>
-					</a>
-					<a href="#" style="text-decoration:none; color: inherit;">
-						<div class = "row fade-img" style="background-color:#eeeeee; border-style:solid; border-color:white; border-width: 5px ">
-							<img class = "img-responsive center-block" style="max-width=100%; max-height:400px; padding-top: 5%; padding-left:5%; padding-right:5%; margin-bottom:15px;" src="./InterestMap.png" alt="InterestMapPicture" />
-							<p class = "header-text3" >Interest Map</p> 
-							<p style= "margin:8px;"> A network style depiction of my scientific and clinical interests using Gephi and data pulled from PubMed </p>
-						</div>
-					</a>
-					<a href="#" style="text-decoration:none; color: inherit;">
-						<div class = "row fade-img" style="background-color:#eeeeee; border-style:solid; border-color:white; border-width: 5px ">
-							<img class = "img-responsive center-block" style="max-width=100%; max-height:400px; padding-top: 5%; padding-left:5%; padding-right:5%; margin-bottom:15px;" src="./WallMap.PNG" alt="WallMapPicture" />
-							<p class = "header-text3" >World Pushpin Map</p> 
-							<p style= "margin:8px;">World pushpin map and custom-made frame to record my travels</p>
-						</div>
-					</a>					
+					</a>							
 				</div>
 					
 
@@ -95,13 +95,13 @@
 							<p style= "margin:8px;">Homemade cookbook with personal recipes and photography</p>
 						</div>
 					</a>
-					<a href="./ChemoCalendar" style="text-decoration:none; color: inherit;">
+					<a href="#" style="text-decoration:none; color: inherit;">
 						<div class = "row fade-img" style="background-color:#eeeeee; border-style:solid; border-color:white; border-width: 5px ">
-							<img class = "img-responsive center-block" style="max-width=100%; max-height:400px; padding-top: 5%; padding-left:5%; padding-right:5%; margin-bottom:15px;" src="./calendar_doxIfos.JPG" alt="DoxIfos_CalendarPicture" />
-							<p class = "header-text3" >Cancer Infusion Calendar</p> 
-							<p style= "margin:8px;">An dynamic calendar to help patients keep track of their cancer infusion schedule (with doxorubicin and ifosfamide). Specifically made to print handouts for sarcoma patients in Dr. Davis' Vanderbilt Clinic. <br> <center> <a href="./ChemoCalendar">Live Calendar Here</a>  |   <a href="https://github.com/emcarthur/emcarthur.github.io/tree/master/projects/ChemoCalendar">Github Project Code Here</a></center></p>
+							<img class = "img-responsive center-block" style="max-width=100%; max-height:400px; padding-top: 5%; padding-left:5%; padding-right:5%; margin-bottom:15px;" src="./WallMap.PNG" alt="WallMapPicture" />
+							<p class = "header-text3" >World Pushpin Map</p> 
+							<p style= "margin:8px;">World pushpin map and custom-made frame to record my travels</p>
 						</div>
-					</a>
+					</a>							
 				</div>
 			</div>
 				
