--- a/projects/index.html
+++ b/projects/index.html
@@ -48,7 +48,7 @@
 				<div class = "col-lg-4 col-sm-4 col-xs-12" >
 					<a href="./dna_crochet_pattern" style="text-decoration:none; color: inherit;">
 						<div class = "row fade-img" style="background-color:#eeeeee; border-style:solid; border-color:white; border-width: 5px ">
-							<img class = "img-responsive center-block" style="max-width=100%; max-height:400px; padding-top: 5%; padding-left:5%; padding-right:5%; margin-bottom:15px;" src="./projects/dna_crochet_pattern/DNA%20crochet%20plushie!%203e08b42ff07543ef856af5f1683dc713/Untitled.png" alt="crochetPicture" />
+							<img class = "img-responsive center-block" style="max-width=100%; max-height:400px; padding-top: 5%; padding-left:5%; padding-right:5%; margin-bottom:15px;" src="./dnaicon.png" alt="crochetPicture" />
 							<p class = "header-text3" >DNA crochet pattern</p> 
 							<p style= "margin:8px;"> A crochet pattern and instructions to make a fun DNA plushie toy </p>
 						</div>
