fix science page index.html

--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 
 	</body>
 	
-	<script>
+	<!-- <script>
 function myFunction() {
     alert("Notice: This website is currently still under construction and not totally functional!\n\nThanks,\nEvonne");
 }
-</script>
+</script> -->
 
 </html>
