--- a/science/index.html
+++ b/science/index.html
@@ -53,7 +53,7 @@
 			
 			<div class = "row">
 				<div class = "row center-align ">
-					<img class = "img-responsive center-block" style="max-width=100%;padding-left:10px;margin-bottom:25px;" src="../images/map.png" alt="Interest Map" />
+					<img class = "img-responsive center-block" style="max-width:100%;padding-left:10px;margin-bottom:25px;" src="../images/map.png" alt="Interest Map" />
 				</div>	
 				<p class = "para-text" >I am a current seventh (and final!)-year MD/PhD student at Vanderbilt University in Nashville, TN. The self-generated “Interest Map” above illustrates the many interconnected domains of my scientific and research interest. My overarching scientific aims are to use computational and informatics-based approaches to genomic medicine. Learn more about how I generated my <b><a href="../projects/">interest map here</a></b>.</p>
 				<hr>
