--- a/projects/cookbook/index.html
+++ b/projects/cookbook/index.html
@@ -59,7 +59,7 @@
 				<hr>
 				<iframe width="940px" height="547px" src="https://www.yumpu.com/en/embed/view/WsOkJwSxQfmAFNr4" frameborder="0" allowfullscreen="true"  allowtransparency="true"></iframe>
 			<div class = "row text-right">
-				<p style="margin: 15px; size: 10px; color: gray;">&copy; Evonne McArthur 2015</p>
+				<p style="margin: 15px; size: 10px; color: gray;">&copy; Evonne McArthur 2015 - 2022</p>
 			</div>
 		</div><!-- container --> 
     </body>
