--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	
 	<body onload="myFunction()">
 	
-		<div style="padding-left:40px;padding-right=40px;" class="container">
+		<div style="padding-left:40px;padding-right:40px;" class="container">
 					
 			<div class="row text-uppercase" style="font-family: 'Open Sans', sans-serif; font-weight: 300;">
 				<p class="title-text1">Evonne McArthur Web Portfolio</p>
