--- a/photography/india/index.html
+++ b/photography/india/index.html
@@ -139,7 +139,7 @@
 			
 			
 			<div class = "row text-right">
-			<p style="margin: 15px; size: 10px; color: gray;">&copy; Evonne McArthur 2015</p>
+			<p style="margin: 15px; size: 10px; color: gray;">&copy; Evonne McArthur 2015 - 2022</p>
 			</div>
 		</div><!-- container --> 
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
