--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				</div>
 				
 				<div style="padding:0;" class="col-lg-3  col-sm-3 col-xs-12 text-center fade-img">
-				<a href="#" class="thumbnail purple-text">
+				<a href="./about/" class="thumbnail purple-text">
 					<img class = "img-responsive center-block" src="images/phone.png" alt="about button" >
 					<h3 class = "no-top-margin"> about </h3>
 				</a>
