--- a/photography/index.html
+++ b/photography/index.html
@@ -31,7 +31,7 @@
                         </a>
                     </div>
                     <div class="header-text1 font2 col-sm-8 col-sm-pull-4 col-xs-12">
-                        <a href="../science" class="thumbnail green-text">
+                        <a href="../science/" class="thumbnail green-text">
                             <span class = "highlight-green header-boxes" style="white-space: nowrap">&nbsp;science&nbsp;</span>
                         </a>
                         <span>&nbsp;</span>
@@ -39,11 +39,11 @@
                             <span class = "highlight-blue header-boxes" style="white-space: nowrap; background-color:#323ea7; color: white;">&nbsp;photography&nbsp;</span>
                         </a>
 						<span>&nbsp;</span>
-                        <a href="../projects" class="thumbnail red-text">
+                        <a href="../projects/" class="thumbnail red-text">
                             <span class = "highlight-red header-boxes" style="white-space: nowrap">&nbsp;projects&nbsp;</span>
                         </a>
                         <span>&nbsp;</span>
-                        <a href="#" class="thumbnail purple-text">
+                        <a href="../about/" class="thumbnail purple-text">
                             <span class = "highlight-purple header-boxes" style="white-space: nowrap">&nbsp;about&nbsp;</span>
                         </a>
                     </div>
