--- a/projects/cookbook/index.html
+++ b/projects/cookbook/index.html
@@ -46,7 +46,7 @@
                         <span class = "highlight-red header-boxes" style="white-space: nowrap; background-color:#cc0000; color: white;">&nbsp;projects&nbsp;</span>
                     </a>
                     <span>&nbsp;</span>
-                    <a href="#" class="thumbnail purple-text">
+                    <a href="../../about/" class="thumbnail purple-text">
                         <span class = "highlight-purple header-boxes" style="white-space: nowrap">&nbsp;about&nbsp;</span>
                     </a>
                 </div>
