--- a/science/index.html
+++ b/science/index.html
@@ -45,7 +45,7 @@
                         <span class = "highlight-red header-boxes" style="white-space: nowrap">&nbsp;projects&nbsp;</span>
                     </a>
                     <span>&nbsp;</span>
-                    <a href="#" class="thumbnail purple-text">
+                    <a href="../about/" class="thumbnail purple-text">
                         <span class = "highlight-purple header-boxes" style="white-space: nowrap">&nbsp;about&nbsp;</span>
                     </a>
                 </div>
