add linocut project, attempt to fix font issue

--- a/projects/index.html
+++ b/projects/index.html
@@ -87,6 +87,13 @@
 							<p style= "margin:8px;">Web app developed to visualize and edit medical diagnostic schemas</p>
 						</div>
 					</a>
+					<a href="https://www.youtube.com/watch?v=G10OKZEdGvM" style="text-decoration:none; color: inherit;">
+						<div class = "row fade-img" style="background-color:#eeeeee; border-style:solid; border-color:white; border-width: 5px ">
+							<img class = "img-responsive center-block" style="max-width:100%; max-height:400px; padding-top: 5%; padding-left:5%; padding-right:5%; margin-bottom:15px;" src="./linocutTree.png" alt="SkiMapPicture" />
+							<p class = "header-text3" >Linocut Block Printing</p> 
+							<p style= "margin:8px;">Video of my linoleum block printing art process to celebrate my MD/PhD journey</p>
+						</div>
+					</a>
 					<a href="http://emideaworkshop.etsy.com/" style="text-decoration:none; color: inherit;">
 						<div class = "row fade-img" style="background-color:#eeeeee; border-style:solid; border-color:white; border-width: 5px ">
 							<img class = "img-responsive center-block" style="max-width:100%; max-height:400px; padding-top: 5%; padding-left:5%; padding-right:5%; margin-bottom:15px;" src="./SkiMap.PNG" alt="SkiMapPicture" />
