final fix font issue, change copyright date

--- a/photography/landscape/index.html
+++ b/photography/landscape/index.html
@@ -7,9 +7,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0,user-scalable=no">
 		
 		<title>Evonne McArthur Web Portfolio</title>
-		<link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Covered+By+Your+Grace' rel='stylesheet' type='text/css'>
+		<link href='//fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
+		<link href='//fonts.googleapis.com/css?family=Open+Sans:300,400' rel='stylesheet' type='text/css'>
+		<link href='//fonts.googleapis.com/css?family=Covered+By+Your+Grace' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="../../css/bootstrap.css">
 		<link rel="stylesheet" href="../../css/myStyle.css">
 	
@@ -98,7 +98,7 @@
 				</div><!-- rg-gallery -->
 			</div><!-- content -->
 			<div class = "row text-right">
-			<p style="margin: 15px; size: 10px; color: gray;">&copy; Evonne McArthur 2015 - 2022</p>
+			<p style="margin: 15px; size: 10px; color: gray;">&copy; Evonne McArthur 2015 - 2023</p>
 			</div>
 		</div><!-- container --> 
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
