--- a/science/index.html
+++ b/science/index.html
@@ -16,9 +16,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0,user-scalable=no">
 		
 		<title>Evonne McArthur Web Portfolio</title>
-		<link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Covered+By+Your+Grace' rel='stylesheet' type='text/css'>
+		<link href='//fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
+		<link href='//fonts.googleapis.com/css?family=Open+Sans:300,400' rel='stylesheet' type='text/css'>
+		<link href='//fonts.googleapis.com/css?family=Covered+By+Your+Grace' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="../css/bootstrap.css">
 		<link rel="stylesheet" href="../css/myStyle.css">
 	
@@ -84,7 +84,7 @@
 				<p class = "para-text" >View my CV with publications below or <b><a href="./EvonneMcArthur_CV.pdf">here</a></b> (last updated Oct 2022):</p>
 				<embed class = "center-block" src="./EvonneMcArthur_CV.pdf" width="800" height="1000" type='application/pdf'>
 			<div class = "row text-right">
-				<p style="margin: 15px; size: 10px; color: gray;">&copy; Evonne McArthur 2015 - 2022</p>
+				<p style="margin: 15px; size: 10px; color: gray;">&copy; Evonne McArthur 2015 - 2023</p>
 			</div>
 		</div><!-- container --> 
     </body>
