--- a/photography/index.html
+++ b/photography/index.html
@@ -15,9 +15,9 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Evonne McArthur Web Portfolio</title>
-		<link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Covered+By+Your+Grace' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400' rel='stylesheet' type='text/css'>
+		<link href='//fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
+		<link href='//fonts.googleapis.com/css?family=Covered+By+Your+Grace' rel='stylesheet' type='text/css'>
+		<link href='//fonts.googleapis.com/css?family=Open+Sans:300,400' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="../css/bootstrap.css">
 		<link rel="stylesheet" href="../css/myStyle.css">
 	</head>
@@ -80,7 +80,7 @@
 				</div>
 			
 			<div class = "row text-right">
-				<p style="margins: 15px; size: 10px; color: gray;">&copy; Evonne McArthur 2015 - 2022</p>
+				<p style="margins: 15px; size: 10px; color: gray;">&copy; Evonne McArthur 2015 - 2023</p>
 			</div>
 		</body>
 	
