--- a/about/index.html
+++ b/about/index.html
@@ -67,8 +67,9 @@
                         <!-- text-center  -->
 
                       
-                        <p class = "para-text" >Thanks for stopping by to check out my work. I am a current seventh (and final!)-year MD/PhD student at Vanderbilt University in Nashville, TN. 
-                            This website serves as a portfolio to organize my personal and professional interests in science, art, data science, and web visualization. This is all programmed from scratch (so please excuse any bugs!).</p>
+                        <p class = "para-text" >Thanks for stopping by to check out my work. I am a current internal medicine medical resident at the University of Washington where I am pursuing a physician scientist career. I recently graduated from the MD/PhD program at Vanderbilt University in Nashville, TN. </p>
+                        <p class = "para-text" >I have particular interests in adult medical genetics and the application of technology to personalize patient care and improve medical education. To accomplish these goals, I have conducted academic research in domains ranging from evolutionary genetics to applied clinical informatics. I am also a clinical contributor and team leader for <a href="https://glass.health/">Glass Health</a> where I leverage AI to support clinical reasoning and personalized medical documentation.</p>
+                        <p class = "para-text" >  This website serves as a portfolio to organize my personal and professional interests in science, art, data science, and web visualization. This is all programmed from scratch (so please excuse any bugs!).</p>
                         <p class = "para-text" >I'm happy to chat about computational genomics, informatics-based approaches to medicine, technology in education, sourdough techniques, chocolate chip cookie recipes, favorite places to downhill ski, or any combination of the above! Feel free to reach out at [firstname][dot][lastname][at]gmail[dot]com or at the social media below.</p>
                         <div class="row" style="display: flex; justify-content: center;">
                             <a href="https://twitter.com/EvonneMcArthur">                         
